# wcli

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  whatsapp_lib.py  whatsapp_web.py
.github/: codestyle.yaml
.github/workflows/: codestyle.yaml  linter.yml
lib/: whatsapp_lib.py
main/: client.py  server.py  whatsapp_web.py
net/: client.py  server.py
server/: server.py
