[tool.poetry]
name = "wcli"
version = "0.1.0"
description = "WhatsApp Web Command Line Interface for interaction and backup of chats"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
